Issue 221: Wrap hierarchical facet labels

--- a/themes/KnihovnyCz/less/custom.less
+++ b/themes/KnihovnyCz/less/custom.less
@@ -509,3 +509,7 @@ h6:hover .heading-permalink
     text-decoration: underline;
   }
 }
+
+.jstree-facet li span.main {
+  white-space: normal;
+}
